--- a/app/appMgr/index.html
+++ b/app/appMgr/index.html
@@ -11,7 +11,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>用户权限配置 - IT运维管理平台</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -24,65 +23,65 @@
     <script src="../../resource/jslib/modernizr-2.6.2.min.js"></script>
     <script src="../../resource/jslib/respond.min.js"></script>
 </head>
-<body>
-<script type="text/x-handlebars" data-template-name='application'>
-    <div id="header">
-        <div id="site-nav">
-            <div id="site-nav-bd">
-                <ul class="quick-menu">
-                    <li class="menu-item">
-                        欢迎您，顶级管理员
-                    </li>
-                    <li class="menu-item">
-                        <img src="img/user_info.gif">
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-no" style="width:48px;" href="/itsm/setting/index.jsp" rel="nofollow">配置</a>
-                        <b class="leftline"></b>
-                        <b class="rightline"></b>
-                    </li>
+<body class="appMgr">
+<div id="header" class="navbar navbar-inverse navbar-fixed-top">
+    <div id="site-nav">
+        <div id="site-nav-bd">
+            <ul class="quick-menu">
+                <li class="menu-item">
+                    欢迎您，顶级管理员
+                </li>
+                <li class="menu-item">
+                    <img src="img/user_info.gif">
+                </li>
+                <li class="menu-item">
+                    <a class="menu-no" style="width:48px;" href="#" rel="nofollow">配置</a>
+                    <b class="leftline"></b>
+                    <b class="rightline"></b>
+                </li>
 
-                    <li class="menu-item">
-                        <div class="menu">
-                            <a class="menu-hd" style="width:58px;">帮助<b class="bt"></b></a>
+                <li class="menu-item">
+                    <div class="menu">
+                        <a class="menu-hd" style="width:58px;">帮助<b class="bt"></b></a>
 
-                            <div class="menu-bd" style="width:80px;line-height:1.7;" role="menu" aria-hidden="true"
-                                 id="menu-3">
-                                <div>
-                                    <a href="javascript:void(0);" onclick="window.open('/itsm/help/index.htm')">用户手册</a>
-                                    <a href="javascript:void(0);" onclick="aboutClickHandler();return false;">关于</a><br>
-                                </div>
+                        <div class="menu-bd" style="width:80px;line-height:1.7;" role="menu" aria-hidden="true"
+                             id="menu-3">
+                            <div>
+                                <a href="javascript:void(0);" onclick="window.open('/itsm/help/index.htm')">用户手册</a>
+                                <a href="javascript:void(0);">关于</a><br>
                             </div>
                         </div>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-no" style="width:48px;" target="_top" href="/itsm/user/login.jsp?command=relogin"
-                           rel="nofollow">退出</a>
-                        <b class="leftline"></b>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <ul id="mainNav">
-            <li>
-                <a href="/itsm/itil/">
-                    运维服务
-                </a>
-            </li>
-        </ul>
-        <div id="level-2" style="text-align:center;">
-            <ul style="text-align: center; margin-left: 570px; visibility: visible; ">
-                <li class="current">
-                    <a href="/itsm/user/" target="_parent">用户权限配置</a>
+                    </div>
                 </li>
-                <li>
-                    <a href="#" onclick="backup()">返回<img src="img/Backup.gif" style="vertical-align:middle;"></a>
+                <li class="menu-item">
+                    <a class="menu-no" style="width:48px;" target="_top" href="/itsm/user/login.jsp?command=relogin"
+                       rel="nofollow">退出</a>
+                    <b class="leftline"></b>
                 </li>
             </ul>
         </div>
     </div>
+    <ul id="mainNav">
+        <li>
+            <a href="/itsm/itil/">
+                运维服务
+            </a>
+        </li>
+    </ul>
+    <div id="level-2" style="text-align:center;">
+        <ul style="text-align: center; margin-left: 570px; visibility: visible; ">
+            <li class="current">
+                <a href="/itsm/user/" target="_parent">用户权限配置</a>
+            </li>
+            <li>
+                <a href="#">返回<img src="img/Backup.gif" style="vertical-align:middle;"></a>
+            </li>
+        </ul>
+    </div>
+</div>
+<script type="text/x-handlebars" data-template-name='application'>
     <ul class="nav nav-tabs" id="myTab">
-        <li class="active"><a href="#home"  data-toggle="tab">Home</a></li>
+        <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
         <li><a href="#profile" data-toggle="tab">Profile</a></li>
         <li><a href="#messages" data-toggle="tab">Messages</a></li>
         <li><a href="#settings" data-toggle="tab">Settings</a></li>
@@ -95,6 +94,7 @@
     </div>
 
     <div class="btn-group">
+        <button class="btn">1</button>
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
             Action
             <span class="caret"></span>
@@ -136,7 +136,7 @@
 
 <style type="text/css">
     #affix.affix {
-        top: 0px;
+        top: 84px;
     }
 </style>
 <!--传统写法-->
@@ -153,31 +153,6 @@
         }
     });
     require(["app"], function (App) {
-        App.ready = function(){
-            console.log("app ready")
-            console.dir(arguments)
-            var $window = $(window);
-            $('#myTab').find('a').click(function (e) {
-                e.preventDefault();
-                $(this).tab('show');
-            });
-
-            $('#myTab').find('a').on('show', function (e) {
-                //e.target; // activated tab
-                //e.relatedTarget; // previous tab
-                console.log('show')
-            });
-            $('#myTab').find('a').on('shown', function (e) {
-                e.target; // activated tab
-                e.relatedTarget; // previous tab
-                console.log('shown')
-            });
-            $('#affix').affix({
-                offset:{
-                    top:167
-                }
-            });
-        };
     });
 </script>
 </body>
