删除无用的

--- a/app/appMgr/index.html
+++ b/app/appMgr/index.html
@@ -152,8 +152,7 @@
             'jslib/ember':['jslib/jquery', 'jslib/handlebars']
         }
     });
-    require(["app"], function (App) {
-    });
+    require(["app"]);
 </script>
 </body>
 </html>
