--- a/app/appMgr/index.html
+++ b/app/appMgr/index.html
@@ -84,24 +84,25 @@
         <div class="row">
             <div class="span3">
                 <ul id="affix" class="nav nav-list bj-app-sidenav">
-                    <li><a href="#overview"><i class="icon-chevron-right"></i> Overview</a></li>
-                    <li><a href="#transitions"><i class="icon-chevron-right"></i> Transitions</a></li>
-                    <li><a href="#modals"><i class="icon-chevron-right"></i> Modal</a></li>
-                    <li><a href="#dropdowns"><i class="icon-chevron-right"></i> Dropdown</a></li>
-                    <li><a href="#scrollspy"><i class="icon-chevron-right"></i> Scrollspy</a></li>
-                    <li><a href="#tabs"><i class="icon-chevron-right"></i> Tab</a></li>
-                    <li><a href="#tooltips"><i class="icon-chevron-right"></i> Tooltip</a></li>
-                    <li><a href="#popovers"><i class="icon-chevron-right"></i> Popover</a></li>
-                    <li><a href="#alerts"><i class="icon-chevron-right"></i> Alert</a></li>
-                    <li><a href="#buttons"><i class="icon-chevron-right"></i> Button</a></li>
-                    <li><a href="#collapse"><i class="icon-chevron-right"></i> Collapse</a></li>
-                    <li class=""><a href="#carousel"><i class="icon-chevron-right"></i> Carousel</a></li>
-                    <li class=""><a href="#typeahead"><i class="icon-chevron-right"></i> Typeahead</a></li>
-                    <li class="active"><a href="#affix"><i class="icon-chevron-right"></i> Affix</a></li>
+                    <li><h3>组织结构</h3></li>
+                    <li><input type="text" placeholder="输入拼音首字母搜索"
+                               data-provide="typeahead"
+                               data-items="4" data-source="[&quot;Alabama&quot;,&quot;Alaska&quot;,&quot;Arizona&quot;,&quot;Arkansas&quot;,&quot;California&quot;,&quot;Colorado&quot;,&quot;Connecticut&quot;,&quot;Delaware&quot;,&quot;Florida&quot;,&quot;Georgia&quot;,&quot;Hawaii&quot;,&quot;Idaho&quot;,&quot;Illinois&quot;,&quot;Indiana&quot;,&quot;Iowa&quot;,&quot;Kansas&quot;,&quot;Kentucky&quot;,&quot;Louisiana&quot;,&quot;Maine&quot;,&quot;Maryland&quot;,&quot;Massachusetts&quot;,&quot;Michigan&quot;,&quot;Minnesota&quot;,&quot;Mississippi&quot;,&quot;Missouri&quot;,&quot;Montana&quot;,&quot;Nebraska&quot;,&quot;Nevada&quot;,&quot;New Hampshire&quot;,&quot;New Jersey&quot;,&quot;New Mexico&quot;,&quot;New York&quot;,&quot;North Dakota&quot;,&quot;North Carolina&quot;,&quot;Ohio&quot;,&quot;Oklahoma&quot;,&quot;Oregon&quot;,&quot;Pennsylvania&quot;,&quot;Rhode Island&quot;,&quot;South Carolina&quot;,&quot;South Dakota&quot;,&quot;Tennessee&quot;,&quot;Texas&quot;,&quot;Utah&quot;,&quot;Vermont&quot;,&quot;Virginia&quot;,&quot;Washington&quot;,&quot;West Virginia&quot;,&quot;Wisconsin&quot;,&quot;Wyoming&quot;]"></li>
+                    <li><a href="#overview"><i class="icon-chevron-right"></i> 科室A</a></li>
+                    <li class="active"><a href="#transitions"><i class="icon-chevron-right"></i> 科室B</a></li>
+                    <li><a href="#modals"><i class="icon-chevron-right"></i> 科室C</a></li>
+                    <li><a href="#dropdowns"><i class="icon-chevron-right"></i> 科室D</a></li>
+                    <li><a href="#scrollspy"><i class="icon-chevron-right"></i> 科室E</a></li>
+                    <li><a href="#tabs"><i class="icon-chevron-right"></i> 科室F</a></li>
+                    <li><a href="#tooltips"><i class="icon-chevron-right"></i> 科室G</a></li>
+                    <li><a href="#popovers"><i class="icon-chevron-right"></i> 科室H</a></li>
+                    <li><a href="#alerts"><i class="icon-chevron-right"></i> 科室I</a></li>
+                    <li><a href="#buttons"><i class="icon-chevron-right"></i> 科室J</a></li>
+                    <li><a href="#collapse"><i class="icon-chevron-right"></i> 科室K</a></li>
                 </ul>
             </div>
-            <div id="ember158" class="ember-view span7" style="height:2000px;">
-                <table class="table table-bordered">
+            <div id="ember158" class="ember-view span8" style="height:2000px;">
+                <table class="table table-bordered bj-app-table">
                     <thead>
                     <tr>
                         <th>#</th>
@@ -131,7 +132,8 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td colspan="2">Larry the Bird</td>
+                        <td>Michael</td>
+                        <td>Jordon</td>
                         <td>@twitter</td>
                     </tr>
                     </tbody>
