broadaJs-1 整合bootstrap 主页面视图

--- a/app/appMgr/index.html
+++ b/app/appMgr/index.html
@@ -24,7 +24,7 @@
     <script src="../../resource/jslib/respond.min.js"></script>
 </head>
 <body class="appMgr">
-<div id="header" class="navbar navbar-inverse navbar-fixed-top">
+<div id="header">
     <div id="site-nav">
         <div id="site-nav-bd">
             <ul class="quick-menu">
@@ -79,77 +79,8 @@
         </ul>
     </div>
 </div>
-<script type="text/x-handlebars" data-template-name='application'>
-    <div class="container">
-        <div class="row">
-            <div class="span3">
-                <ul id="affix" class="nav nav-list bj-app-sidenav">
-                    <li><h3>组织结构</h3></li>
-                                data-provide="typeahead"
-                               data-source="[&quot;Alabama&quot;,&quot;Alaska&quot;,&quot;Arizona&quot;,&quot;Arkansas&quot;,&quot;California&quot;,&quot;Colorado&quot;,&quot;Connecticut&quot;,&quot;Delaware&quot;,&quot;Florida&quot;,&quot;Georgia&quot;,&quot;Hawaii&quot;,&quot;Idaho&quot;,&quot;Illinois&quot;,&quot;Indiana&quot;,&quot;Iowa&quot;,&quot;Kansas&quot;,&quot;Kentucky&quot;,&quot;Louisiana&quot;,&quot;Maine&quot;,&quot;Maryland&quot;,&quot;Massachusetts&quot;,&quot;Michigan&quot;,&quot;Minnesota&quot;,&quot;Mississippi&quot;,&quot;Missouri&quot;,&quot;Montana&quot;,&quot;Nebraska&quot;,&quot;Nevada&quot;,&quot;New Hampshire&quot;,&quot;New Jersey&quot;,&quot;New Mexico&quot;,&quot;New York&quot;,&quot;North Dakota&quot;,&quot;North Carolina&quot;,&quot;Ohio&quot;,&quot;Oklahoma&quot;,&quot;Oregon&quot;,&quot;Pennsylvania&quot;,&quot;Rhode Island&quot;,&quot;South Carolina&quot;,&quot;South Dakota&quot;,&quot;Tennessee&quot;,&quot;Texas&quot;,&quot;Utah&quot;,&quot;Vermont&quot;,&quot;Virginia&quot;,&quot;Washington&quot;,&quot;West Virginia&quot;,&quot;Wisconsin&quot;,&quot;Wyoming&quot;]"></li>
-                    <li><a href="#overview"><i class="icon-chevron-right"></i> 科室A</a></li>
-                    <li class="active"><a href="#transitions"><i class="icon-chevron-right"></i> 科室B</a></li>
-                    <li><a href="#modals"><i class="icon-chevron-right"></i> 科室C</a></li>
-                    <li><a href="#dropdowns"><i class="icon-chevron-right"></i> 科室D</a></li>
-                    <li><a href="#scrollspy"><i class="icon-chevron-right"></i> 科室E</a></li>
-                    <li><a href="#tabs"><i class="icon-chevron-right"></i> 科室F</a></li>
-                    <li><a href="#tooltips"><i class="icon-chevron-right"></i> 科室G</a></li>
-                    <li><a href="#popovers"><i class="icon-chevron-right"></i> 科室H</a></li>
-                    <li><a href="#alerts"><i class="icon-chevron-right"></i> 科室I</a></li>
-                    <li><a href="#buttons"><i class="icon-chevron-right"></i> 科室J</a></li>
-                    <li><a href="#collapse"><i class="icon-chevron-right"></i> 科室K</a></li>
-                </ul>
-            </div>
-            <div id="ember158" class="ember-view span8" style="height:2000px;">
-                <table class="table table-bordered bj-app-table">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@TwBootstrap</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Michael</td>
-                        <td>Jordon</td>
-                        <td>@twitter</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>kevin</td>
-                        <td>won</td>
-                        <td>@twitter</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
 
-    <iframe id="_contentFrame_" frameborder="0" src="" style="width: 100%;"></iframe>
-</script>
-
+<iframe id="_contentFrame_" frameborder="0" src="../usersMgr/"></iframe>
 <!--传统写法-->
 <script src="../../resource/jslib/require.min.js"></script>
 <script>
