--- a/app/appMgr/index.html
+++ b/app/appMgr/index.html
@@ -69,7 +69,7 @@
         </li>
     </ul>
     <div id="level-2" style="text-align:center;">
-        <ul style="text-align: center; margin-left: 570px; visibility: visible; ">
+        <ul style="text-align: center; visibility: visible; ">
             <li class="current">
                 <a href="/itsm/user/" target="_parent">用户权限配置</a>
             </li>
